test/whoami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: test
spec:
  entryPoints:
    - websecure-wan-traffic
  routes:
    - match: Host(`whoami.wevelsiep.com`)&& ClientIP(`192.168.50.0/24`)
      kind: Rule
      priority: 99
      services:
        - name: whoami
          port: 80
    - match: Host(`whoami.wevelsiep.com`) && ! ClientIP(`192.168.50.0/24`)
      kind: Rule
      priority: 100
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: oauth2-auth
          namespace: oauth2
